# Licita.AI

./: .env.example  .gitignore  Home.py  Início.py  Procfile  README.md  app.py  poetry.toml  pyproject.toml  requirements.txt  runtime.txt  setup.sh  test_extraction.py  🏠_Início.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
pages/: 0_Conhecimento.py  0_Licitações.py  1_Assistente.py  1_Assistente_1.py  1_Assistente_3.py  1_📚_Conhecimento.py  2_Assistente_2.py  2_Boletins.py  2_Resumo.py  2_📝_Resumos.py  2_📝_Resumos_(CrewAI).py  3_Boletins.py  3_Dashboard.py  3_🧠_Assistente.py  4_Assistente_New.py  4_Dashboard.py  4_📰_Boletins.py  5_Feedback.py  5_📊_Dashboard.py  6_🗣️_Feedback.py
reference/: dify_chat_app_api.md  dify_knowledge_api.md
src/: __init__.py  boletins.py  chat_com_edital.py  custom_pinecone_client.py  dify_client.py  main.py  pinecone_client.py  tender_docs_summary_chain.py  tender_knowledge.py  utils.py
src/tender_analysis_crew/: agents.py  crew.py  tasks.py  tools.py
src/tender_analysis_crew/templates/: extract_and_label_sections_template.py  tender_summary_task_template.py
src/tender_notice_labeling/: tender_notice_labeling_template.py  tender_notice_processor.py  tender_notice_templates.py
tests/: conftest.py  tender_docs_summary_tests.py  test_boletins.py  test_chat_com_edital.py  test_dify_client.py  test_file_upload.py  test_main.py  test_pages.py  test_pinecone_client.py  test_tender_knowledge.py  test_tender_notice_processor.py  test_ui.py  test_utils.py
