[tool.poetry]
name = "licita-ai"
version = "0.1.0"
description = "A Streamlit app for chatting with procurement documents using Dify"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.12.8"
streamlit = "^1.41.1"
pytest = "^8.0.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
crewai = "*"
crewai-tools = "*"
chardet = "^5.2.0"
markdown = "^3.7"
weasyprint = "^63.1"
docx = "^0.2.4"
langchain = "0.2.11"
langchain-community = "0.2.10"
langchain_core = "0.2.25"
langchain_openai = "0.1.19"

[tool.poetry.group.dev.dependencies]
responses = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 
