[tool.poetry]
name = "licita-ai"
version = "0.1.0"
description = "Licita.AI: Inteligência Artificial aplicada a licitações"
authors = ["João Morossini <morossini@proton.me>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.12.8"
streamlit = "^1.41.1"
pytest
requests
python-dotenv
crewai
crewai-tools
chardet
markdown
weasyprint
docx
langchain
langchain-community
langchain_core
langchain_openai

pypdf
plotly
pandas
[tool.poetry.group.dev.dependencies]
responses

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "app:main"
