[tool.poetry]
name = "licita-ai"
version = "0.1.0"
description = "Licita.AI: Inteligência Artificial aplicada a licitações"
authors = ["João Morossini <morossini@proton.me>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
streamlit = "^1.41.1"
langchain = ">=0.2,<0.3"
langchain_openai = "*"
crewai = ">=0.60"
crewai-tools = "*"
pypdf = "*"
pandas = "*"
plotly = "*"
python-dotenv = "*"
aiohttp = "*"

rootpath = "^0.1.1"
[tool.poetry.group.dev.dependencies]
responses = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "app:main"
